k8s/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - image: barbaralipnik/products:latest
          name: products
          ports:
            - containerPort: 8080
              protocol: TCP
#          livenessProbe:
#            httpGet:
#              path: /health/liveness
#              port: 8080
#            initialDelaySeconds: 40
#            periodSeconds: 3
#          readinessProbe:
#            httpGet:
#              path: /health/readiness
#              port: 8080
#            initialDelaySeconds: 40
#            periodSeconds: 3

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merchants-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: merchants
  template:
    metadata:
      labels:
        app: merchants
    spec:
      containers:
        - image: barbaralipnik/merchants:latest
          name: merchants
          ports:
            - containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8081
            initialDelaySeconds: 40
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8081
            initialDelaySeconds: 40
            periodSeconds: 3


---

apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: products

---

apiVersion: v1
kind: Service
metadata:
  name: merchants-service
spec:
  type: ClusterIP
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: merchants

#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: products-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
#spec:
#  ingressClassName: nginx
#  rules:
#    - http:
#        paths:
#          - path: /products(/|$)(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: products
#                port:
#                  number: 8080
##          - path: /merchants(/|$)(.*)
##            pathType: Prefix
##            backend:
##              service:
##                name: merchants
##                port:
##                  number: 8080
