k8s/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /products(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: products-service
                port:
                  number: 8080
          - path: /merchants(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: merchants-service
                port:
                  number: 8081
          - path: /scraper(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: scraper-service
                port:
                  number: 8082
          - path: /emails(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: emails-service
                port:
                  number: 8083
          - path: /swagger(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: swagger-ui-service
                port:
                  number: 9000
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8090
